# 2021ROS_Courses

./: README.md
documents/: luento3-2021_01-26.md  luento4-2021-02-02.md
dokumentit/: Luentomuistiinpanot.md
fixes/: setup.bash
palautettavat/: tehtäväntanto.md
ros_ai_robowars_ws/src/: image_saver.launch  image_saver_caller.py
ros_ai_robowars_ws/src/robot_position/src/: 3way_splitter.py  robots_orientation.csv  robots_orientation_20210317_500lines.csv  robots_orientation_header.txt  robots_positions.csv  robots_positions_20210317_500lines.csv  robots_positions_20210317_500lines_1of3.csv  robots_positions_20210317_500lines_2of3.csv  robots_positions_20210317_500lines_3of3.csv  robots_positions_20210317_rotate.csv  robots_positions_20210317_static.csv  robots_positions_header.txt  robots_positions_odom_static.csv  rostopic-rotate_robot-4ever.sh  rostopic-rotate_robot-backwards.sh  rostopic-rotate_robot-forward.sh  rostopic-rotate_robot-left-3sec.sh  rostopic-rotate_robot-right-3sec.sh  rostopic-rotate_robot-stop.sh  rotate_robot_rostopic.sh  train_posistion_robot1.py  write_to_csv.py
ros_ai_robowars_ws/src/robotti_1/urdf/: robotti_1.urdf
ros_ai_robowars_ws/src/samk_robowar_world/: package.xml
ros_ai_robowars_ws/src/speed_detection/src/: speed_detector.py
rosbags/: image_converter.py  train_speed_detection.py
src/dokumentit/: luento02_muistiinpanot.txt
src/tf_harjoitus/: REQUIREMENTS  fashion_mnist_predictor.py  fashion_mnist_trainer.py  image_download_preprosessing.py
tests/: tf-test2-hello.py  tf-test3-warnings.py
